#102 refactor(idea): replace `List.get(0)` with `List.getFirst()`